--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.johnbeckner.buzzshelter.Registration">
+    tools:context="com.example.johnbeckner.buzzshelter.RegistrationActivity">
 
     <EditText
         android:id="@+id/name_text_field"
