--- a/app/src/main/res/layout/activity_shelter_info.xml
+++ b/app/src/main/res/layout/activity_shelter_info.xml
@@ -62,11 +62,23 @@
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/DropReservation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/shelterAddress"
+        android:layout_below="@+id/shelterAddress"
+        android:layout_marginEnd="20dp"
+        android:text="Drop Reservation"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="479dp" />
+
+    <Button
         android:id="@+id/reserveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/shelterAddress"
         android:layout_below="@+id/shelterAddress"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="26dp"
         android:text="Reserve a Spot!"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="479dp" />
@@ -75,7 +87,7 @@
         android:id="@+id/returnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/reserveButton"
+        android:layout_below="@+id/DropReservation"
         android:layout_centerHorizontal="true"
         android:text="Back" />
 </RelativeLayout>
