--- a/app/src/main/res/layout/activity_search_shelter.xml
+++ b/app/src/main/res/layout/activity_search_shelter.xml
@@ -10,11 +10,14 @@
         android:id="@+id/textView2"
         android:layout_width="92dp"
         android:layout_height="19dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="Search Shelter"
         android:textAllCaps="false"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="146dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/NameField"
